# resume-backend

./: .env.example  .gitignore  README.md  pyproject.toml
data/: extra-context.md  mock-qa.json  resume.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html
src/: config.py  conversation_store.py  guard.py  logging_config.py  main.py  models.py  prompt.py  rate_limiter.py
src/llm/: __init__.py  base.py  deepseek.py  ollama.py  openrouter.py
src/resume_backend/: config.py  main.py
src/routes/: chat.py  conversations.py  health.py
tests/: conftest.py  test_chat.py  test_guard.py  test_health.py  test_prompt.py
