[project]
name = "resume-backend"
version = "0.1.0"
description = "AI-powered resume chatbot backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "openai>=2.44.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.10",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.50.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resume_backend"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
